# api/handler/article_handler.go
@@ -29,6 +29,10 @@ type articleHandler struct {
 // @Tags articles
 // @Accept  json
 // @Produce  json
+// @Param since query string false "Only articles published at or after this time are returned." default(2019-01-19T14:13:01Z)
+// @Param until query string false "Unused parameter (deprecated)" default(2019-01-19T14:13:01Z)
+// @Param sort query string false "The direction of the sort by pub_date" default(desc) Enums(desc, asc)
+// @Param limit query int false "The number of articles that you can get the result" default(50) mininum(1) maxinum(50)
 // @Success 200 {object} entity.Article
 // @Router /articles [get]
 func (a *articleHandler) Get(w http.ResponseWriter, r *http.Request) {
@@ -57,7 +61,7 @@ func (a *articleHandler) Get(w http.ResponseWriter, r *http.Request) {
 // @Tags articles
 // @Accept  json
 // @Produce  json
-// @Param   article body entity.Article true  "article"
+// @Param   article body form.CreateArticleForm true  "article"
 // @Success 200
 // @Router /articles [post]
 func (a *articleHandler) Create(w http.ResponseWriter, r *http.Request) {
@@ -78,7 +82,7 @@ func (a *articleHandler) Create(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	respondWithJSON(w, http.StatusCreated, map[string]string{"message": "Successfully Created"})
+	respondWithJSON(w, http.StatusOK, map[string]string{"message": "Successfully Created"})
 }
 
 func respondWithJSON(w http.ResponseWriter, code int, payload interface{}) {
